apps/core/argocd-route/manifests/http-route.yaml
# apps/core/hubble-route/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https-wildcard   # fixa no listener HTTPS específico
  hostnames:
    - argocd.lab.the-lab.zone
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
